Fix custom color overlaps with post more buttons in widgets

--- a/assets/src/less/widgets.less
+++ b/assets/src/less/widgets.less
@@ -208,7 +208,7 @@
 		}
 	}
 
-	.more {
+	.post-summary .more {
 		font-size: @font-tiny;
 		// remove button styles
 		padding: 0;
